--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "body-parser": "~1.15.2",
     "consign": "^0.1.2",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-alpha.2",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "express-session": "^1.14.2",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
