--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-session": "^1.14.2",
+    "method-override": "^2.3.7",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
